企業評価画面を更新する処理を設けた