@@ -21,7 +21,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Controller
 public class AnalysisController {
@@ -99,7 +98,7 @@ public class AnalysisController {
     public String scrapeById(final String documentId, final RedirectAttributes redirectAttributes) {
         final List<String> idList = Arrays.stream(documentId.split(","))
                 .filter(dId -> dId.length() == 8)
-                .collect(Collectors.toList());
+                .toList();
         if (idList.isEmpty()) {
             redirectAttributes.addFlashAttribute(
                     MESSAGE,
@@ -184,6 +183,9 @@ public class AnalysisController {
     public String evaluate(final String code, final RedirectAttributes redirectAttributes) {
         if (Objects.nonNull(code)) {
             final boolean isEvaluated = analysisService.evaluate(CodeInputData.of(code));
+            if (isEvaluated) {
+                viewService.updateValuationView(CodeInputData.of(code));
+            }
             redirectAttributes.addFlashAttribute("isEvaluated", isEvaluated);
             return REDIRECT + UriComponentsBuilder.fromUri(V2_CORPORATE_PATH)
                     .queryParam("code", code.substring(0, 4)).toUriString();
